Bug 288957 - No right scroll down bar in rekonq after going to website fro speeddial screen!
Summary: No right scroll down bar in rekonq after going to website fro speeddial screen!
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.8.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: 0.9
Assignee: Andrea Diamantini
URL:
Keywords:
: 266001 291182 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-12-14 10:44 UTC by Drs. Albert Spijkers
Modified: 2012-01-29 10:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Drs. Albert Spijkers 2011-12-14 10:44:13 UTC
Version:           0.8.1 (using KDE 4.7.2) 
OS:                Linux

I tried to enter search engine website or oracle website from speeddial screen on rekonq 0.8.1 and did not get the right hand site of the webbrowser screen scrol down or up bar.

Real bug or these lowsy Jehovah SCUM kackers again!

Reproducible: Always

Steps to Reproduce:
Try to add website to speed dial window and open it from speed dial. You wil not get a righthand site scroll bar.

Actual Results:  
Try to add website to speed dial window and open it from speed dial. You wil not get a righthand site scroll bar.

Expected Results:  
nornal ability to scroll down. 

It does work fine when you type in the URL directly.
Comment 1 Andrea Diamantini 2011-12-14 23:25:17 UTC
You're right :(
Targetting for ASAP
Comment 2 Drs. Albert Spijkers 2011-12-15 09:14:25 UTC
I also noticed some other small things. Do you want me to use the browser for a time and do some testing for small bugs?
The slider for zoom does appear for instance but on Novell 12.1 it doesn't zoom for .pdf files. Just possible that it was a bloody hacker, I am targeted by a lot of them (hackers I mean). Really nasty!
Albert



Drs. Albert Spijkers 

DBA consulting 

IT Consultant

Belvederelaan 159

8043 LW Zwolle

Overijsel 

Nederland

Tel: 038 – 8514625

Gsm: 06-26839051

 

Blog:
http://drsalbertspijkers.blogspot.com/

LinkedIn:
http://nl.linkedin.com/pub/drs-albert-spijkers/13/b4a/7a8

Website: www.dbaconsulting.nl 

Email: albertspijkers@hotmail.com

 



> Date: Wed, 14 Dec 2011 23:25:17 +0000
> From: adjam7@gmail.com
> To: albertspijkers@hotmail.com
> Subject: [Bug 288957] No right scroll down bar in rekonq after going to website fro speeddial screen!
> 
> https://bugs.kde.org/show_bug.cgi?id=288957
> 
> 
> Andrea Diamantini <adjam7@gmail.com> changed:
> 
>            What    |Removed                     |Added
> ----------------------------------------------------------------------------
>    Target Milestone|---                         |0.9
> 
> 
> 
> 
> --- Comment #1 from Andrea Diamantini <adjam7 gmail com>  2011-12-14 23:25:17 ---
> You're right :(
> Targetting for ASAP
> 
> -- 
> Configure bugmail: https://bugs.kde.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You reported the bug.
Comment 3 Andrea Diamantini 2011-12-15 14:57:17 UTC
(In reply to comment #2)
> I also noticed some other small things. Do you want me to use the browser for a
> time and do some testing for small bugs?

Any help will be appreciated, thanks :)
Comment 4 Drs. Albert Spijkers 2011-12-16 09:26:55 UTC
Okay! I use several platforms and will get back to you when I find small issues! In other words not always on Novell SuSe or RedHat! Now I use lion for a few days to complete a scan for example!



Drs. Albert Spijkers 

DBA consulting 

IT Consultant

Belvederelaan 159

8043 LW Zwolle

Overijsel 

Nederland

Tel: 038 – 8514625

Gsm: 06-26839051

 

Blog:
http://drsalbertspijkers.blogspot.com/

LinkedIn:
http://nl.linkedin.com/pub/drs-albert-spijkers/13/b4a/7a8

Website: www.dbaconsulting.nl 

Email: albertspijkers@hotmail.com

 



> Date: Thu, 15 Dec 2011 14:57:17 +0000
> From: adjam7@gmail.com
> To: albertspijkers@hotmail.com
> Subject: [Bug 288957] No right scroll down bar in rekonq after going to website fro speeddial screen!
> 
> https://bugs.kde.org/show_bug.cgi?id=288957
> 
> 
> 
> 
> 
> --- Comment #3 from Andrea Diamantini <adjam7 gmail com>  2011-12-15 14:57:17 ---
> (In reply to comment #2)
> > I also noticed some other small things. Do you want me to use the browser for a
> > time and do some testing for small bugs?
> 
> Any help will be appreciated, thanks :)
> 
> -- 
> Configure bugmail: https://bugs.kde.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You reported the bug.
Comment 5 Andrea Diamantini 2012-01-04 12:53:59 UTC
*** Bug 266001 has been marked as a duplicate of this bug. ***
Comment 6 Andrea Diamantini 2012-01-10 17:56:25 UTC
*** Bug 291182 has been marked as a duplicate of this bug. ***
Comment 7 Andrea Diamantini 2012-01-29 10:15:59 UTC
Git commit ef3412789cee141bbd929e062959784332ba6434 by Andrea Diamantini.
Committed on 29/01/2012 at 11:18.
Pushed by adjam into branch 'master'.

Restore scrollbars when using websnap features

M  +1    -2    src/previewselectorbar.cpp
M  +1    -1    src/previewselectorbar.h
M  +7    -2    src/websnap.cpp
M  +1    -1    src/websnap.h

http://commits.kde.org/rekonq/ef3412789cee141bbd929e062959784332ba6434