Restore scrollbars when using websnap features

BUG:288957